# schoolmanagement_cppunit

./: CMakeLists.txt  README  README.md
src/: Course.cpp  Course.h  Student.cpp  Student.h
testsuite/: CMakeLists.txt  TestStudent.cpp  TestStudent.h  TestStudentMain.cpp
